# corrida-dfa-regex-workspace

./: Cargo.toml  LICENSE  README.md  rustc-ice-2024-12-28T00_29_51-24312.txt
amazon-interview-redemption-regex-parser/: Cargo.toml
amazon-interview-redemption-regex-parser/src/: lib.rs  lib2.rs  regex.rs
corrida/: Cargo.toml
corrida/src/: alloc.rs  arena.rs  attempt2.rs  basic_structures.rs  final.rs  lib.rs  toy_structures.rs
gerber/: Cargo.toml
gerber/src/: bumpalo_attempt.rs  dfa.rs  lib.rs  nfa.rs
