[package]
name = "amazon-interview-redemption-regex-parser"
version = "0.1.0"
edition = "2021"
description = "Minimal Regex Parser using Thompson's Construction and optionall DFA conversion"
license = "MIT"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gerber = "*"
corrida = "*"
smallvec = "1.13.2"
