[package]
name = "corrida"
version = "0.1.0"
edition = "2024"
description = "Heterogenous Arena Allocator"
license = "MIT"

[lib]
path = "src/lib.rs"

# [profile.release]
# debug = true

# [[bin]]
# path = "bin/test.rs"
# name = "test"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.16.0"
const_format = "0.2.34"
