[package]
name = "gerber"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corrida = { path = "../corrida" }
hashbrown = "0.14.5"
impls = "1.0.3"
small-map = "0.1.3"
smallmap = "1.4.2"
smallvec = "1.13.2"

